# sorting-alg-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: few_unique.txt  generate.py  random.txt  scrambled.txt  single_big_swap.txt  sorted.txt  sorted_blocks.txt
include/: heap_sort.h  insertion_sort.h  intro_sort.h  merge_sort.h  quick_sort.h  sort_algorithm.h  tim_sort.h
src/: CMakeLists.txt  heap_sort.cpp  insertion_sort.cpp  intro_sort.cpp  main.cpp  merge_sort.cpp  quick_sort.cpp  tim_sort.cpp
